adds ansible config and sets python interpreter to autodiscover

--- a/roles/drew_user/tasks/tasks.yml
+++ b/roles/drew_user/tasks/tasks.yml
@@ -39,6 +39,7 @@
     - gdb
     - virtualbox
     - node-exporter
+    - cowsay
   when:
     - ansible_pkg_mgr == "dnf"
 
@@ -55,6 +56,7 @@
     - gdb
     - virtualbox
     - prometheus-node-exporter
+    - cowsay
   when:
     - ansible_pkg_mgr == "apt"
 
