task name typo for drew_user packages

--- a/roles/drew_user/tasks/main.yml
+++ b/roles/drew_user/tasks/main.yml
@@ -44,7 +44,7 @@
   when:
     - ansible_pkg_mgr == "dnf"
 
-- name: Install base jac494 packages and ensure latest
+- name: Install base packages and ensure latest
   ansible.builtin.apt:
     name: "{{ list_of_packages }}"
     state: latest
